Standardise on Adoptium Temurin Eclipse OpenJDK. This is the same as what is used in jore4-map-matching and jore4-hastus.
Update JRE from 11 (LTS) to 17 (LTS) to enabe migration to Spring Boot 3 in the future.

Remove obsolete `XX:MaxPermSize` option from failsafe plugin.