@@ -225,7 +225,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <groupId>org.apache.maven.plugins</groupId>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m</argLine>
                     <disableXmlReport>false</disableXmlReport>
                     <groups>integrationTest</groups>
                     <includes>
